--- a/assets/styles.scss
+++ b/assets/styles.scss
@@ -78,3 +78,10 @@ body {
   .space{
       height: 70px;
   }
+
+  @mixin important-text {
+    color: red;
+    font-size: 25px;
+    font-weight: bold;
+    border: 1px solid blue;
+  }
